src/cli/monitor/snapshots/vimit__cli__monitor__tests__tui_snapshot_full_preset.snap
---
source: src/cli/monitor/tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ VibeMode v0.6.4 Dir | WARNING | peak 78%                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                        
 ┌ 5h | warning | reset через 3ч 59м ─────────────────────┐  ┌ 24h | ok | reset через 18ч 59м ────────────────────────┐ 
 │██████████████████████████78% ██████████████            │  │██████████████████████████51%                           │ 
 └────────────────────────────────────────────────────────┘  └────────────────────────────────────────────────────────┘ 
 cr 39/50 (78%)                                              cr 91/180 (51%)                                            
 rq 610/1,0K (61%)                                           rq 1,5K/4,0K (38%)                                         
 history                                                     history                                                    
 █                                                           █                                                          
 █                                                           █                                                          
 █                                                           █                                                          
 █                                                           █                                                          
                                                                                                                        
                                                                                                                        
 ┌ 7d | ok | reset через 5д 23ч ──────────────────────────┐  ┌ 30d | ok | reset через 20д 23ч ────────────────────────┐ 
 │███████████████████████   42%                           │  │███████████████████████   41%                           │ 
 └────────────────────────────────────────────────────────┘  └────────────────────────────────────────────────────────┘ 
 cr 214/600 (36%)                                            cr 819/2,0K (41%)                                          
 rq 8,3K/20,0K (42%)                                         rq 26,0K/80,0K (32%)                                       
 history                                                     history                                                    
 █                                                           █                                                          
 █                                                           █                                                          
 █                                                           █                                                          
 █                                                           █                                                          
                                                                                                                        
┌ alerts ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│warning 5h/credits at 78.0%: 11 left, reset через 3ч 59м                                                              │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ agents ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│token rate 42.0/min | sessions 2 active 1                                                                             │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ? help   5 trends   q quit   r refresh  auto 5s  next 3s                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
