src/cli/monitor/snapshots/vimit__cli__monitor__tests__tui_snapshot_reset_edge_with_empty_trends.snap
---
source: src/cli/monitor/tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ VibeMode v0.6.4 Dir | WARNING | peak 87%                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                        
 ┌ 5h | ok | reset unknown ───────────────────────────────┐  ┌ 24h | warning | reset через 10м ───────────────────────┐ 
 │███████████               20%                           │  │██████████████████████████87% ███████████████████       │ 
 └────────────────────────────────────────────────────────┘  └────────────────────────────────────────────────────────┘ 
 cr 20/100 (20%)                                             cr n/a                                                     
 rq n/a                                                      rq 87/100 (87%)                                            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
┌ alerts ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│warning 24h/requests at 87.0%: 13 left, reset через 10м                                                               │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ agents ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│run with --with-abtop for agent data                                                                                  │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 30-day trends ───────────────────────────────────────────────────────────────────────────────────────────────────────┐
│no trend data yet — run vimit to collect snapshots                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ? help   5 trends   q quit   r refresh  auto 5s  next 4s                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
