src/cli/monitor/snapshots/vimit__cli__monitor__tests__tui_snapshot_waiting.snap
---
source: src/cli/monitor/tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ VibeMode v0.6.4 Dir | waiting for data...                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Limits────────────────────────────────────────────────────────────────────────────────────────────┐
│Collecting VibeMode status...                                                                     │
│Press r to refresh, ? for help                                                                    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ alerts ──────────────────────────────────────────────────────────────────────────────────────────┐
│waiting for data                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│waiting for data                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ? help   5 trends   q quit   r refresh  auto 5s  next 3s                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
